Fixes vertical align of `.btn-close` elements

--- a/src/less/closable.less
+++ b/src/less/closable.less
@@ -26,6 +26,7 @@
 .component.closable .btn-close {
   cursor: pointer;
   display: inline-block;
+  line-height: normal;
 }
 
 .component.closed {
