--- a/src/less/notification.less
+++ b/src/less/notification.less
@@ -65,7 +65,6 @@ body > .notification {
 
 .notification .btn-close {
   cursor: pointer;
-  font-weight: bolder;
   margin: @margin;
   position: absolute;
   top: 0;
